Finally got it to ouput the JSON converted to a Java object

--- a/build.gradle
+++ b/build.gradle
@@ -52,11 +52,11 @@ task uberjar(type: Jar, dependsOn: [':compileJava', ':compileGroovy', 'compileSo
 }
 
 task buildImage(type:Exec) {
-    commandLine 'docker', 'build', '-t', 'WorkerA', '.'
+    commandLine 'docker', 'build', '-t', 'workera', '.'
 }
 
 task runImage(type:Exec) {
-    commandLine 'docker', 'run', '-i', 'WorkerA'
+    commandLine 'docker', 'run', '-i', 'workera'
 }
 
 
