Add Jacoco test coverage report

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ plugins {
 	id 'com.github.johnrengelman.shadow' version '4.0.3'
 	
 }
+
+apply plugin: 'jacoco'
+
 application {
 	mainClassName = 'com.hp.pwp.capstone.Convert'
 }
