Getting the websocket quotes integrated

--- a/build.gradle
+++ b/build.gradle
@@ -59,9 +59,9 @@ task uberjar(type: Jar, dependsOn: [':compileJava', ':compileGroovy', 'compileSo
     }
 }
 
-//task buildImage(type:Exec) {
-//    commandLine 'docker', 'build', '-t', 'workera', '.'
-//}
+task buildImage(type:Exec) {
+    commandLine 'docker', 'build', '-t', 'workera', '.'
+}
 
 //task runImage(type:Exec) {
 //    commandLine 'docker', 'run', '-i', 'workera'
